<resources>

    <string name="app_name">SVSU CSS</string>
    <string name="title_about_us">About</string>
    <string name="title_my_contributions">Me</string>
    <string name="title_add_contribution">Add</string>
    <string name="title_latest_updates">Updates</string>
    <string name="title_contact_us">Contact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="copy_right" translatable="false">Copyrights © SVSU All Rights Reserved</string>
    <string name="css_description">Protecting the well-being, safety and health of the citizens of Haryana is a top priority
of the Government of Haryana. For this, the government is taking all necessary steps
and is well prepared to face the challenge and threat posed by the growing epidemic
of COVID 19 - Coronavirus.\n\nGovernment of Haryana have launched portal : (https://covidssharyana.in/) to enable the following:
Covid-19 Sangharsh Senani\n\n
1. Any interested shop / store owner (Kiryana/ vegetable/ milk/ chemist, etc.) can
register to supply the required items\n\n2. Anyone who wants to help people by contributing to the fight against the
            coronavirus can register</string>
    <string name="css_title">Covid19 Sangharsh Senani</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
